apps/arcs/mu/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arc-mu
  labels:
    sage.arc: "true"
    arc.name: "mu"
