apps/arcs/mu/base/mu-netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mu-egress
  namespace: arc-mu
spec:
  endpointSelector:
    matchLabels:
      app: mu-relay
  egress:
    # DNS to kube-dns only
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
